--- a/sass/components/_portfolio-cards-list.scss
+++ b/sass/components/_portfolio-cards-list.scss
@@ -1,11 +1,16 @@
 .cards-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 
   &__item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    flex-basis: ((100% - 0) /1);
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 60px) / 3);
+    }
   }
 
   &__link {
@@ -93,5 +98,11 @@
   &__link:hover &__overlay::before {
     opacity: 1;
     transform: translateY(0%);
+  }
+}
+
+.additional-padding {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding: 20px 24px 56px 24px;
   }
 }
