--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,18 +4,30 @@
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__list {
+    @media screen and (max-width: 767px) {
+      max-width: 326px;
+      justify-content: start;
+    }
     display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    row-gap: 15px;
     justify-content: center;
+    margin-bottom: 40px;
   }
 
-  &__item {
-    margin-left: 8px;
-    margin-bottom: 50px;
-  }
+  // &__item {
+  //   // margin-left: 8px;
+  //   // margin-bottom: 50px;
+  // }
 
   &__button {
     color: var(--primary-text-color);
